--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body id="body">
 
 	<h1>Background Generator</h1>
+	<p>hello</p>
 
 	<input type="color" id="color1" name="color1" value="#ff0000">
 	<input type="color" id="color2" name="color2" value="#00ff00">
